--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "better-ui",
   "version": "1.5.0",
   "description": "Make Acode look better with the Better UI plugin",
-  "scripts": {
-    "dev": "node .devServer/start-dev",
-    "build": "webpack && node .devServer/pack-zip.js",
-    "release": "webpack --mode production"
-  },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/overskul/better-ui.git"
@@ -18,23 +14,16 @@
   },
   "homepage": "https://github.com/overskul/better-ui#readme",
   "dependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.20.5",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
     "@types/ace": "^0.0.50",
-    "babel-loader": "^9.1.0",
-    "html-tag-js": "^1.1.22",
-    "ip": "^1.1.8",
-    "jszip": "^3.10.1",
-    "live-server": "^1.2.2",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "html-tag-js": "^1.1.41"
   },
   "devDependencies": {
-    "css-loader": "^7.1.2",
-    "sass": "^1.77.8",
-    "sass-loader": "^16.0.0",
-    "style-loader": "^4.0.0"
+    "archiver": "^7.0.1",
+    "esbuild": "^0.24.0",
+    "esbuild-sass-plugin": "^3.3.1"
+  },
+  "scripts": {
+    "dev": "node esbuild.config.js --serve",
+    "build": "node esbuild.config.js"
   }
 }
