--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/overskul/better-ui#readme",
   "dependencies": {
     "@types/ace": "^0.0.50",
+    "eventemitter3": "^5.0.1",
     "html-tag-js": "^1.1.41"
   },
   "devDependencies": {
