--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@types/ace": "^0.0.50",
     "eventemitter3": "^5.0.1",
-    "html-tag-js": "^1.1.41"
+    "html-tag-js": "^1.1.41",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "archiver": "^7.0.1",
